--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,46 +2,33 @@ name: CI/CD – Frontend (Next.js)
 
 on:
   push:
-    branches:
-      - main
-      - develop
+    branches: [main, develop]
   pull_request:
-    branches:
-      - main
-      - develop
+    branches: [main, develop]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Récupérer le code source
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Installer Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: 'npm'
 
-      # 3️⃣ Installer les dépendances
       - name: Install dependencies
-        run: |
-          npm install
-          npm install tar
-          npm ci
+        run: npm ci
 
-      # 4️⃣ Linter (optionnel mais conseillé)
       - name: Lint code
         run: npm run lint --if-present
 
-      # 5️⃣ Build du projet
       - name: Build Next.js app
         run: npm run build
 
-      # 6️⃣ Déploiement sur Vercel (automatique)
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v25
         with:
@@ -50,3 +37,4 @@ jobs:
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           working-directory: ./
           scope: ${{ secrets.VERCEL_ORG_ID }}
+          vercel-args: '--prod'
