--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
